--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?uabzwutg#1" target="_blank">首页</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/1?tdhhrm" target="_blank">动态网</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/2?zthyg" target="_blank">大纪元</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/4?kwqmyyywa" target="_blank">看中国</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/pHh5q?zjqvo" target="_blank">新生网</a> | <a href="https://doyvntponycdh.cloudfront.net/tktpt?zyucqryp" target="_blank">阿波罗网</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/Mjpvu?faijc" target="_blank">干净世界</a> | <a href="https://dervszfjn9udk.cloudfront.net/10?tnavumx" target="_blank">退党服务</a> | <a href="https://d239x61949z6p.cloudfront.net/Rffqf?latpigxd" target="_blank">明慧广播</a> | <a href="https://dmepc9x6zy689.cloudfront.net/nw9Vn?cacuqa" target="_blank">传奇时代</a> | <a href="https://d1u99il8548gs4.cloudfront.net/AF9AG?srvrta" target="_blank">新境界影视</a> | <a href="https://d3abchfok6e2j.cloudfront.net/zqMQA?ttehkwjn" target="_blank">文昭谈论</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/7?eimnmztu" target="_blank">明慧</a></p><p><a href="https://d53tcmkdq4r1q.cloudfront.net/9?htrht" target="_blank">大法</a> | <a href="https://d14a0yccee2yym.cloudfront.net/3?lsudnq" target="_blank">新唐人</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/obAhT?fschh" target="_blank">人民报</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/xXNHu?dvnjz" target="_blank">放光明</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/5?pkfdp" target="_blank">新纪元</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/6?iutbj" target="_blank">希望之声</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/11?ldgpix" target="_blank">无界网络</a> | <a href="https://d1fejrztdgsube.cloudfront.net/Pueji?zgnmsexg" target="_blank">追查国际</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/16?ytxuovsd" target="_blank">明慧之窗</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/LdvzZ?iqpccdz" target="_blank">细语人生</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/fBn3r?nfmoxbptv" target="_blank">新世纪影视</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/PUWMb?enafg" target="_blank">江峰时刻</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/8?cajtxanyc" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?cieztrb#1" target="_blank">首页</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/1?presmnl" target="_blank">动态网</a> | <a href="https://d3bo5docy69ast.cloudfront.net/2?zrqndt" target="_blank">大纪元</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/4?odzbalspi" target="_blank">看中国</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/pHh5q?ybfzxb" target="_blank">新生网</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/tktpt?wpfnmfoly" target="_blank">阿波罗网</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/Mjpvu?qfkxen" target="_blank">干净世界</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/10?jlifqo" target="_blank">退党服务</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/Rffqf?omemh" target="_blank">明慧广播</a> | <a href="https://dmepc9x6zy689.cloudfront.net/nw9Vn?tzffrxwyn" target="_blank">传奇时代</a> | <a href="https://d2184d78prq5kd.cloudfront.net/AF9AG?zfdgqj" target="_blank">新境界影视</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/zqMQA?wkhqsgith" target="_blank">文昭谈论</a> | <a href="https://dfxrfb9070id6.cloudfront.net/7?qxgrapt" target="_blank">明慧</a></p><p><a href="https://d2axefeaz3j87r.cloudfront.net/9?wmoce" target="_blank">大法</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/3?sqnwlbr" target="_blank">新唐人</a> | <a href="https://dep6yudto3kbo.cloudfront.net/obAhT?pifnc" target="_blank">人民报</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/xXNHu?bsrxd" target="_blank">放光明</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/5?hbiwasna" target="_blank">新纪元</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/6?apvgo" target="_blank">希望之声</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/11?pdvzu" target="_blank">无界网络</a> | <a href="https://d1jex6syje0yji.cloudfront.net/Pueji?wzqejlhzy" target="_blank">追查国际</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/16?hukrrssp" target="_blank">明慧之窗</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/LdvzZ?zzfier" target="_blank">细语人生</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/fBn3r?fxbiw" target="_blank">新世纪影视</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/PUWMb?kdato" target="_blank">江峰时刻</a> | <a href="https://d3bo5docy69ast.cloudfront.net/8?rmwedk" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290946.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290949-GettyImages-1224872512-320x200.jpg"><p align="center">中国民众热议“垃圾时间” 专家剖析原因</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290946.md#1" title="中国民众热议“垃圾时间” 专家剖析原因""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290949-GettyImages-1224872512-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1" title="房市难触底 中国新房价格创9年来最大跌幅""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/05/id14252605-GettyImages-2152798952-320x200.jpg">&nbsp;</a>
@@ -13,22 +13,22 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1" title="【直播】川普遇刺最新进展 记者连线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290722-800X600-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290685.md#1" title="中共三中全会前夕 北京严密管控民众""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290710-2-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291019.md#1">华运圣火在南湾点燃 传递华运和平精神</a><br>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291011.md#1">菲利蒙市议员与居民再次探讨无家可归者话题</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290946.md#1">中国民众热议“垃圾时间” 专家剖析原因</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290945.md#1">旧金山陈小焱启动竞选 百余华裔到场助威</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290942.md#1">爱尔兰参议院访团抵台 将会见副总统萧美琴</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1">房市难触底 中国新房价格创9年来最大跌幅</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290989.md#1">用这一物可以让老鼠逃离花园 你身上就有</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291019.md#1">华运圣火在南湾点燃 传递华运和平精神</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291011.md#1">菲利蒙市议员与居民再次探讨无家可归者话题</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290946.md#1">中国民众热议“垃圾时间” 专家剖析原因</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290945.md#1">旧金山陈小焱启动竞选 百余华裔到场助威</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290942.md#1">爱尔兰参议院访团抵台 将会见副总统萧美琴</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290933.md#1">房市难触底 中国新房价格创9年来最大跌幅</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290868.md#1">危地马拉国会议长率团访台 将拜会赖清德</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1">新西兰总理：将更多揭露中共间谍活动</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290864.md#1">纽约市住房管理局腐败案 一亚裔被告认罪</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290875.md#1">300纽约小房东时代广场集会“要公平” 多数为华人</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290126.md#1">限额5000元 中国多家银行下调储户交易额度</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290084.md#1">台湾罕见披露中共火箭军在内蒙古试射导弹</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290039.md#1">广东多地现不明飞行物 目击者：持续10分钟</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289908.md#1">失业潮下 四川大学拟撤31个专业 引热议</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290084.md#1">台湾罕见披露中共火箭军在内蒙古试射导弹</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289988.md#1">租客朋友暂住未报官 深圳房东遭罚 网民吃惊</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289737.md#1">中国社会戾气上升 逾1个月发生60起袭击事件</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br>
@@ -113,7 +113,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 433,201,203 人
+!共 433,202,752 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288959-LDB2433-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1">CECC幕僚长：阻中共活摘 确保美企不被利用</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/482560-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1">中国四大航空上半年预亏达81亿 全年盈利仍难</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289709.md#1">金华首富女婿叹大陆前沿企业也内卷</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290918-AFP__20240710__2161380146__v3__Preview__WorldLeadersAttendNatoSummitInWashingtonDC-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290853.md#1">新西兰总理：将更多揭露中共间谍活动</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1">三退声明精选（2024/07/14）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
